# scramble-history

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml
manual_scripts/: README.md  manual_solves.py
scramble_history/: __main__.py  average_parser.py  config.py  cstimer.py  cstimer_scramble_type.py  group_operations.py  log.py  models.py  query.py  solve.py  source_merger.py  state.py  timeformat.py  twistytimer.py  wca_export.py
tests/: average_data.json  cstimer_data.txt  test_average_parser.py  test_grouping.py  test_scramble-history.py
