[project]
name = "scramble_history"
version = "0.1.15"
description = "parses scramble history from cstimer.net and other sources"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["cubing", "data"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "IPython",
  "autotui>=0.4.3",
  "click>=8.0",
  "logzero",
  "more-itertools",
  "platformdirs",
  "pytimeparse",
  "pyyaml",
  "requests",
  "simplejson",
  "tabulate",
]
[[project.authors]]
name = "purarue"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
scramble_history = "scramble_history.__main__:main"

[project.urls]
Homepage = "https://github.com/purarue/scramble_history"

[project.optional-dependencies]
optional = ["orjson", "seaborn"]
testing = ["flake8", "mypy", "pytest"]

[tool.mypy]
pretty = true
show_error_context = true
show_error_codes = true
check_untyped_defs = true
namespace_packages = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = "--doctest-modules scramble_history --verbose tests"

[tool.setuptools.packages.find]
include = ["scramble_history"]
exclude = ["tests*"]
